force-app/main/default/objects/Account/fields/OA_Active__c.field-meta.xml
<CustomField>
    <fullName>OA_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>