force-app/main/default/objects/Account/fields/OA_Activity_Frequency__c.field-meta.xml
<CustomField>
    <fullName>OA_Activity_Frequency__c</fullName>
    <label>Activity Frequency (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>