force-app/main/default/objects/Account/fields/OA_Activity_Overdue__c.field-meta.xml
<CustomField>
    <fullName>OA_Activity_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Overdue</label>
    <type>Checkbox</type>
</CustomField>