force-app/main/default/objects/Account/fields/OA_NAVCustomerID__c.field-meta.xml
<CustomField>
    <fullName>OA_NAVCustomerID__c</fullName>
    <description>NAVCustomerID</description>
    <externalId>true</externalId>
    <label>OA_NAVCustomerID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>