force-app/main/default/objects/Account/fields/OA_Opportunity_Total__c.field-meta.xml
<CustomField>
    <fullName>OA_Opportunity_Total__c</fullName>
    <label>Opportunity Total</label>
    <summarizedField>Opportunity.OA_Revenue_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>