force-app/main/default/objects/Account/fields/OA_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>OA_Sub_Industry__c</fullName>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetName>OA_Sub_Industry</valueSetName>
    </valueSet>
</CustomField>