force-app/main/default/objects/Account/fields/Overall_Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Overall_Project_Cost__c</fullName>
    <description>This field has the SUM of Total Project Cost field from all the opportunities linked to this Account. This field is further used to get the top 10 clients in reports.</description>
    <label>Overall Project Cost</label>
    <summarizedField>Opportunity.OA_Total_Project_Cost__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>