force-app/main/default/objects/Account/listViews/Activity_OverDue.listView-meta.xml
<ListView>
    <fullName>Activity_OverDue</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>OA_Activity_Frequency__c</columns>
    <columns>OA_Activity_Overdue__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OA_Activity_Overdue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Activity OverDue</label>
</ListView>